* fixed dNd dropzone marker z-index

--- a/asset/css/task.css
+++ b/asset/css/task.css
@@ -108,27 +108,28 @@ div.task .subtasks .task:last-child {
 	height:0;
 	overflow: visible;
 	position:absolute;
-	z-index:1000;
+	z-index:100000;
 }
-#dragDropMarker div {
-	position:absolute;
-	left:-31px;
-	top:-12px;
-	height:25px;
-	width:30px;
-	background: url(../img/icons.png) no-repeat;
-}
-#dragDropMarker.in div {
-	top:1px;
-	background-position:0 -650px;
-}
-#dragDropMarker.after div {
-	background-position:0 -678px;
-}
-#dragDropMarker.before div {
-	top:-14px;
-	background-position:0 -710px;
-}
+	#dragDropMarker div {
+		position:absolute;
+		left:-31px;
+		top:-12px;
+		height:25px;
+		width:30px;
+		background: url(../img/icons.png) no-repeat;
+	}
+		#dragDropMarker.in div {
+			top:1px;
+			background-position:0 -650px;
+		}
+		#dragDropMarker.after div {
+			background-position:0 -678px;
+		}
+		#dragDropMarker.before div {
+			top:-14px;
+			background-position:0 -710px;
+		}
+
 div.task.dragDropTarget > h3 {
 	background-color: #E3EACE;
 }
